fix height on about.html as text is overflowing on mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ h2 {
     padding: 30px;
     object-fit: cover;
     z-index: 1; /* Ensure content is above the pseudo-element */
-    
+  
 }
 
 .hero::before {
@@ -222,7 +222,7 @@ h2 {
 .about-hero {
     position: relative;
     width: 100%;
-    height: 450px;
+    height: 80vh;
     background: url('../img/about-join-photo.jpg') no-repeat center center;
     background-size: cover;
     background-image: center 20%;
@@ -233,6 +233,7 @@ h2 {
     text-align: right;
     object-fit: cover;
     z-index: 1; 
+    
 }
 
 
